# geoapps

./: .codespellignore  .coveragerc  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .relint.yml  .rstcheck.cfg  .travis.yml  FlinFlon.geoh5  Install_Environment.bat  Install_Update.bat  Install_or_Update.bat  LICENSE  README-dev.rst  README.md  README.rst  Start_applications.bat  THIRD_PARTY_LICENSES.txt  THIRD_PARTY_LICENSES2.txt  THIRD_PARTY_SOFTWARE.rst  conda-lock-simpeg-win64.yml  conda-lock.yml  conda-py-3.10-linux-64-geoapps-core.lock.yml  conda-py-3.10-lock.yml  conda-py-3.10-win-64-geoapps-core.lock.yml  conda-py-3.10-win-64-geoapps-ui.lock.yml  conda-py-3.10-win-64-noapps.lock.yml  conda-py-3.7-linux-64-dev.lock.yml  conda-py-3.7-linux-64.lock.yml  conda-py-3.7-lock.yml  conda-py-3.7-osx-64-dev.lock.yml  conda-py-3.7-osx-64.lock.yml  conda-py-3.7-win-64-dev.lock.yml  conda-py-3.7-win-64.lock.yml  conda-py-3.8-linux-64-dev.lock.yml  conda-py-3.8-linux-64.lock.yml  conda-py-3.8-lock.yml  conda-py-3.8-osx-64-dev.lock.yml  (+33 more)
.github/: dependabot.yml
.github/workflows/: build_bundle.yml  codecov.yml  create_env_file.yml  issue_to_jira.yml  packaging.yml  pr_add_jira_summary.yml  pr_jira_actions.yml  pytest-all-os.yaml  pytest-unix-os.yaml  pytest-unix-os.yml  pytest-windows.yaml  pytest-windows.yml  python_analysis.yml  static-analysis.yml  workflow.yaml  write_default_uijson.yaml  zizmor-security.yml
apps/: Automated_Lineament.ipynb  Coordinate_Transformation.ipynb  Copy_data_between_objects.ipynb  Create_contours.ipynb  EM1D_inversion.ipynb  EMAG_global_plot.ipynb  Export_to.ipynb  Geophysical_Inversion_app.ipynb  GravMag_Inversion.ipynb  Grav_Mag_Block_Simulation.ipynb  Object_to_object_interpolation.ipynb  Untitled.ipynb
apps/assets/: FlinFlon.geoh5  MtDore_TMI.geoh5  MtDore_TMI_work.geoh5
apps/functions/: AEM_systems.json  __init__.py  em1d_inversion.py  export.py  fem1d_inversion.py  inversion.py  pf_inversion.py  plotting.py  processing.py  selection.py  simulation.py  tem1d_inversion.py  utils.py
assets/: DC_INV.ipynb  FlinFlon.geoh5  FlinFlon_airborne_tem.geoh5  FlinFlon_dcip.geoh5  FlinFlon_light.geoh5  FlinFlon_natural_sources.geoh5  FlinFlon_tem.geoh5  FlinFlon_v4.geoh5  Inversion_.json  MtDore_TMI.geoh5  input.ui.json  options_tree.json
assets/uijson/: block_model_creation.ui.json  cluster.ui.json  clustering.ui.json  contours.ui.json  direct_current_forward.ui.json  direct_current_forward_2d.ui.json  direct_current_forward_3d.ui.json  direct_current_forward_pseudo3d.ui.json  direct_current_inversion.ui.json  direct_current_inversion_2d.ui.json  direct_current_inversion_3d.ui.json  direct_current_inversion_pseudo3d.ui.json  edge_detection.ui.json  gravity_forward.ui.json  gravity_inversion.ui.json  grid_creation.ui.json  induced_polarization_forward.ui.json  induced_polarization_forward_2d.ui.json  induced_polarization_forward_3d.ui.json  induced_polarization_forward_pseudo3d.ui.json  induced_polarization_inversion.ui.json  induced_polarization_inversion_2d.ui.json  (+18 more)
devtools/: add_url_tag_sha256.py  check-copyright.py  conda_env_pylint.bat  create_application_env_files.py  create_application_files.py  create_geoapps_env_files.py  git_message_hook.py  install_simpeg_env.py  licences_from_pypi.py  pack_simpeg_env.py  pyproject-sha.toml  run_conda_lock.bat  run_conda_lock.py  setup-conda-base.bat  setup-dev.bat  start-app.bat
docs/: AUTHORS.rst  THIRD_PARTY_SOFTWARE.rst  app.yaml  conf.py  environment.yml  index.rst
environments/: conda-py-3.10-linux-64-dev.lock.yml  conda-py-3.10-linux-64.lock.yml  conda-py-3.10-osx-64-dev.lock.yml  conda-py-3.10-osx-64.lock.yml  conda-py-3.10-win-64-dev.lock.yml  conda-py-3.10-win-64.lock.yml  conda-py-3.7-linux-64-dev.lock.yml  conda-py-3.7-linux-64.lock.yml  conda-py-3.7-osx-64-dev.lock.yml  conda-py-3.7-osx-64.lock.yml  conda-py-3.7-win-64-dev.lock.yml  conda-py-3.7-win-64.lock.yml  conda-py-3.8-linux-64-dev.lock.yml  conda-py-3.8-linux-64.lock.yml  conda-py-3.8-osx-64-dev.lock.yml  conda-py-3.8-osx-64.lock.yml  conda-py-3.8-win-64-dev.lock.yml  conda-py-3.8-win-64.lock.yml  conda-py-3.9-linux-64-dev.lock.yml  conda-py-3.9-linux-64.lock.yml  conda-py-3.9-osx-64-dev.lock.yml  conda-py-3.9-osx-64.lock.yml  conda-py-3.9-win-64-dev.lock.yml  conda-py-3.9-win-64-simpeg.lock.yml  conda-py-3.9-win-64.lock.yml  env-python-3.10.yml  env-python-3.11.yml  env-python-3.12.yml  env-python-3.13.yml  env-python-3.7.yml  env-python-3.8.yml  env-python-3.9.yml  py-3.10-linux-64-dev.conda.lock.yml  py-3.10-linux-64.conda.lock.yml  py-3.10-osx-64-dev.conda.lock.yml  py-3.10-osx-64.conda.lock.yml  py-3.10-win-64-dev.conda.lock.yml  py-3.10-win-64.conda.lock.yml  py-3.11-linux-64-dev.conda.lock.yml  py-3.11-linux-64.conda.lock.yml  (+24 more)
geoapps/: Automated_Lineament.ipynb  CDI_to_surfaces.ipynb  Calculator.ipynb  Coordinate_Transformation.ipynb  Create_contours.ipynb  Export_to.ipynb  Geophysical_Inversion_app.ipynb  Grav_Mag_Block_Simulation.ipynb  Index.ipynb  Object_to_object_interpolation.ipynb  TEM_Line_Profiler.ipynb  __init__.py  base.py  em1d_inversion.py  em1d_inversion_app.py  export.py  index.ipynb  inversion.py  meshes.py  models.py  mvi_inversion.py  pf_inversion.py  pf_inversion_app.py  plotting.py  selection.py  simulation.py
geoapps-assets/: FlinFlon.geoh5  FlinFlon_airborne_fem.geoh5  FlinFlon_dcip.geoh5  FlinFlon_natural_sources.geoh5  FlinFlon_tem.geoh5  __init__.py
tests/: Airborne_TMI.tif  FlinFlon.geoh5  UIJson_test.py  __init__.py  assets_path_test.py  clustering_test.py  conftest.py  constants_test.py  data_test.py  data_transfer_test.py  driver_ip_test.py  em1d_run_test.py  formatters_test.py  input_file_test.py  input_validator_test.py  iso_surfaces_test.py  locations_test.py  meshes_test.py  models_test.py  octree_creation_test.py  params_test.py  peak_finder_test.py  preprocessing_test.py  pseudo_three_dimensions_driver_test.py  pyproject_test.py  run_test.py  topography_test.py  utils_test.py  version_test.py  window_test.py  write_default_uijson_test.py  write_ui_json_test.py
(+897 files in other folders)
