[tool.poetry]
name = "geoapps"
version = "0.13.0-alpha.1"
license = "MIT"
description = "Open-sourced Applications in Geoscience"
authors = ["Mira Geoscience <support@mirageoscience.com>"]
maintainers = [
    "Benjamin Kary <benjamink@mirageoscience.com>",
    "Dominique Fournier <dominiquef@mirageoscience.com>",
]
repository = "https://github.com/MiraGeoscience/geoapps"
documentation = "https://mirageoscience-geoapps.readthedocs-hosted.com/"
homepage = "https://www.mirageoscience.com/mining-industry-software/python-integration/"
readme = "package.rst"

packages = [
    { include = "geoapps" },
    { include = "geoapps-assets" },
]
exclude = [
    "geoapps-assets/**/*.geoh5",
    "geoapps-assets/uijson/**",
]

include = [
    { path = "COPYING" },
    { path = "COPYING.LESSER" },
    { path = "LICENSE" },
    { path = "README.rst" },
    { path = "THIRD_PARTY_SOFTWARE.rst" },
    { path = "docs/**/THIRD_PARTY_SOFTWARE.rst" },
]

keywords = ["geology", "geophysics", "earth sciences"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Natural Language :: English",
]

[tool.poetry.scripts]
start_notebook = { callable = "geoapps.scripts.start_notebook:main", extras = ["apps"] }

[tool.poetry.dependencies]
dask = "~2025.3.0"  # also in simpeg[dask]
discretize = "~0.12.0"  # also in simpeg, grid-apps
distributed = "~2025.3.0"  # for dask[distributed]
ipywidgets = "~8.1.8"
ipyfilechooser = "~0.6.0"
matplotlib = "~3.10.4"  # also in geoapps-utils
notebook = "~7.5.7"
numpy = "~2.4.2"
openpyxl = "^3.1.2"
pandas = "^2.2.1"
pydantic = "~2.12.0"  # also in geoh5py, curve-apps, geoapps-utils
pydiso = "~0.2.0"
python-mumps = "0.0.6.*"
rtree = "~1.4.0"
scikit-learn = "~1.8.0"
scipy = "~1.17.0"
tqdm = "^4.66.1"
trimesh = "~4.1.3"

dash = "^3.4.0"
dash-ag-grid = "^32.3.1"
dash-bootstrap-components = "^2.0.3"
dash-daq = "0.6.*"
waitress = "^3.0.2"
dash-core-components = "2.*"
dash-html-components = "2.*"
dash-table = "5.*"

## For a native GUI window
#-------------------------
# not in conda, to be installed through pip only
pywebview = { version = "^6.0", source="pypi", optional = true }

## indirect dependencies though pywebview,
# optional and forcing them through conda
#--------------------------------------------------------
bottle = { version = "*", optional = true }
proxy-tools = { version = "*", optional = true }
pythonnet = { version = "*", optional = true }


## pip dependencies from Git repositories
#----------------------------------------
#geoh5py = {version = ">=0.12.0b5, <0.13.dev", source = "pypi", allow-prereleases = true}
geoh5py = {git = "https://github.com/MiraGeoscience/geoh5py.git", rev = "release/GA_4.8"}

#grid-apps = {version = ">=0.1.0b1, <0.2.dev", source = "pypi", allow-prereleases = true}
grid-apps = {git = "https://github.com/MiraGeoscience/grid-apps.git", rev = "release/GA_4.8"}

#geoapps-utils = {version = ">=0.6.0b2, <0.7.dev", source = "pypi", allow-prereleases = true}
geoapps-utils = {git = "https://github.com/MiraGeoscience/geoapps-utils.git", rev = "release/GA_4.8"}

#mira-simpeg = {version = ">=0.23.0.2b1, <0.23.1.dev", source="pypi", allow-prereleases = true, extras = ["dask"]}
mira-simpeg = {git = "https://github.com/MiraGeoscience/simpeg.git", rev = "release/GA_4.8", extras = ["dask"]}

#curve-apps = {version = ">=0.3.0b4, <0.4.0a.dev", source = "pypi", allow-prereleases = true}
curve-apps = {git = "https://github.com/MiraGeoscience/curve-apps.git", rev = "release/GA_4.8"}

#surface-apps = {version = ">=0.1.0rc1, <0.2.0a.dev", source = "pypi", allow-prereleases = true}
surface-apps = {git = "https://github.com/MiraGeoscience/surface-apps.git", rev = "GEOPY-2911"}

#simpeg-drivers = {version = ">=0.4.0b2, <0.5.0a.dev", source = "pypi", allow-prereleases = true}
simpeg-drivers = {git = "https://github.com/MiraGeoscience/simpeg-drivers.git", rev = "release/GA_4.8"}

#simpeg-archive = {version = ">=0.11.0.1, <0.11.0.2", source = "pypi", allow-prereleases = true}
#simpeg-archive = {git = "https://github.com/MiraGeoscience/simpeg.git", rev = "feature/simpeg_archive"}


## about pip dependencies
# to be specified to work with conda-lock
# - from PyPI: my_package = { version = "1.2.3", source = "pypi" }
# - from URL: !!! no actual lock, as tag or branch can move and installation will fetch current !!!
#   - for a tag:   my_package = { url = "https://github.com/ORGANISATION/REPO/archive/refs/tags/TAG.tar.gz" }
#   - for a branch: my_package = { url = "https://github.com/ORGANISATION/REPO/archive/refs/heads/BRANCH.tar.gz" }
# - to actually lock on a revision: my_package = { git = "https://github.com/ORGANISATION/REPO.git", rev = "GIT_REV" }
#   (where rev value is a tag, a branch name or a commit hash). Can also use ``branch`` or ``tag`` instead of ``rev``

[tool.conda-lock.dependencies]
libblas = "*=*mkl"  # because simpeg already brings in the MKL
widgetsnbextension = "*"
jupyterlab = ">=4.3.0"
jupyter_server = ">=2.15.0"
jupyter_client = ">=8.6.0"

## indirect dependencies, forcing them here for installation through Conda not pip
#---------------------------------------------------------------------------------
bokeh = "3.6.*"   # optional, for dask reporting
fsspec = ">=2022.0"  # from simpeg[dask]
geoana = "0.8.*"  # from simpeg
h5py = ">=3.15.1, 3.*"  # from geoh5py
pillow = ">=12.1.0, 12.*"  # from geoh5py
psutil = ">=7.2.2, 7.2.*"  # from geoh5py
pymatsolver = "0.3.*"  # from simpeg
zarr = ">=2.14.2, 2.14.*"  # from simpeg[dask]

[tool.poetry.group.dev.dependencies]
Pygments = "*"
jupyter-book = "^1.0"
jupytext = "^1.14"
pylint = "*"
pytest = "*"
pytest-cov = "*"
readthedocs-sphinx-ext = "*"
semver = "*"
sphinx = "^5.0"
tomli = "*"

[tool.poetry.extras]
webview = [
    "pywebview",
    "bottle",
    "proxy-tools",
    "pythonnet",
]

[tool.conda-lock]
platforms = ['win-64', 'linux-64']
channels = ['conda-forge']

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "B028",  # no-explicit-stacklevel for warnings.warn()
    "E501",  # line-too-long - code is reformatted (do not care about comments and docstring)
    "F401",  # unsused-import - covered by pycln
    "A005", # TO DO (stdlib-module-shadowing: Module shadows a Python standard-library module)
    "RUF005", # TO DO
    "B007", # TO DO
    "B011", # TO DO
    "B904", # TO DO
    "C408", # TO DO
    "C414", # TO DO
    "C416", # TO DO
    "C419", # TO DO
    "C901", # TO DO
    "RUF005",  # collection-literal-concatenation - wrong suggestion with numpy arrays
    "RUF012", # TO DO
    "RUF013", # TO DO
    "RUF015", # TO DO
    "UP038", # TO DO
    "TID252", # TO DO
]
select = [
    "A",  # flake8-builtins
    "B",  # flake8-bugbear
    "B006",  # Do not use mutable data structures for argument defaults
    "B9",  # flake8-bugbear opiniated warnings
    "BLE",  # flake8-blind-except
    "C4",  # flake8-comprehensions
    "C9",  # mccabe
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "RUF",  # ruff rules
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
    "W",  # pycodestyle warnings
]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
# default formatting is just fine

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
scripts_are_modules = true
show_error_context = true
show_column_numbers = true
check_untyped_defs = true

plugins = [
    'numpy.typing.mypy_plugin'
]

[tool.pytest.ini_options]
#addopts =

[tool.coverage.run]
branch = true
source = ["geoapps"]
omit = []

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "pass",
    "if TYPE_CHECKING",
    "pragma: no cover"
]

fail_under = 35

[tool.coverage.html]
skip_empty = true
skip_covered = true

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
